Melhoria na lógica de entrada do usuário e formatação